Tue Apr 22 06:53:30 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (objspace_malloc_increase): run GC after realloc not only
	  malloc and calloc by GC.stress.  [ruby-core:62103] [Feature #9761]

Mon Apr 21 19:12:20 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_coderange_scan_restartable): coderange is always
	  ENC_CODERANGE_VALID if the string is ASCII-8BIT and already has a non
	  ASCII character.

Mon Apr 21 19:02:44 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (coderange_scan): remove useless condtion `p < e` after
	  search_nonascii.

	* string.c (rb_str_coderange_scan_restartable): ditto.

Mon Apr 21 18:55:21 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/-test-/string/coderange.c: add Bug::String.new#coderange_scan
	  to explicitly scan coderange.

Mon Apr 21 18:19:35 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (coderange_scan): remove unused logic.

	* string.c (rb_str_coderange_scan_restartable): ditto.

Mon Apr 21 14:11:48 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_putc): fix for non-ascii
	  encoding, like as IO#putc.  [ruby-dev:48114] [Bug #9765]

Sun Apr 20 12:57:15 2014  Masaya Tarui  <tarui@ruby-lang.org>

	* st.c (st_foreach_check): change start point of search at check
	  from top to current. [ruby-dev:48047] [Bug #9646]

Sun Apr 20 08:41:33 2014  Andrew DeMaria  <ademariad@gmail.com>

	* lib/mkmf.rb (link_command, libpathflag, create_makefile): prefer
	  user specified `$LIBPATH` than `$DEFLIBPATH`.  [ruby-core:62100]
	  [ruby-trunk - Bug #9760]

Sun Apr 20 06:01:18 2014  Eric Wong  <e@80x24.org>

	* gc.c (rb_gc_writebarrier): drop special case for big hash/array
	  [Bug #9518]

Sat Apr 19 15:38:29 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (primary): flush cmdarg flags inside left-paren in a
	  command argument, to allow parenthesed do-block as an argument
	  without arguments parentheses.  [ruby-core:61950] [Bug #9726]
